@@ -1,6 +1,8 @@
 Sun  Sep 12  2004	H. Wade Minter (minter@lunenburg.org)
      * Add a Publisher choice to the bulk_add routine.
      * Refactor a couple of looped database queries to use placeholders.
+     * Use the same color for the Preview Song button (add new song window)
+       as we do for the Play button.
 
 Sat  Sep 11  2004	H. Wade Minter (minter@lunenburg.org)
      * Fixed a similar bug in the edit_categories function.
